Fix a11y failure on contrast audit

--- a/theme.css
+++ b/theme.css
@@ -22,7 +22,6 @@ header h1 {
   font-size: 1rem;
   font-family: "Courier New", Courier, monospace;
   display: flex;
-  color: teal;
 }
 
 @media screen and (min-width: 500px) {
@@ -41,7 +40,7 @@ header h1::after {
   content: "";
   margin-left: 1ch;
   display: inline-block;
-  background: teal;
+  background: dimgray;
   width: 1ch;
   height: 1em;
   animation: cursor 800ms infinite;
